# Load-Model

./: CMakeLists.txt  Camera.h  LoadModel.cpp  LoadModel.h  Main.cpp  Model.h  Shader.cpp  Shader.h
glsl/: fragment.txt  vertex.txt
model/: 173.fbx  173.mtl  untitled.blend  yinlang.fbx  yinlang.mtl
